finish button textfield banner card

--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -3,13 +3,13 @@
 @import 'config/layout.scss';
 
 @import 'utilities/spacing.scss';
+@import './utilities/mixin-card.scss';
 
 @import 'base/fonts.scss';
 @import 'base/global.scss';
 @import 'base/links.scss';
 @import 'base/typography.scss';
 
-$background-color:silver;
-body{
-    background-color: $background-color;
-}
+
+@import 'components/demo.scss';
+@import 'components/components';
