--- a/src/components/template.html
+++ b/src/components/template.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>COMPONENT_NAME Component's page</title>
-    <script type="text/html" src="{require('../index.js')}"></script>
 </head>
 <body>
     <div class="component-container">
-        <div class="c-COMPONENT-NAME">
+        <div class="c-COMPONENT_NAME">
 
         </div>
     </div>
