--- a/src/components/actions.html
+++ b/src/components/actions.html
@@ -1,26 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>actions Component's page</title>
-</head>
-<body>
-    <div class="component-container">
-        <div class="c-actions">
-            <li class="c-action">
-                <sapn class="c-actoin__title">طلبات تحتاج المعالجة 10</sapn>
-                <a href="" class="c-btn c-action__link">مشاهدة الطلبات</a>
-            </li>
-            <li class="c-action">
-                <sapn class="c-actoin__title">رسائل تحتاج الاجابة 5</sapn>
-                <a href="" class="c-btn c-action__link">مشاهدة الرسائل</a>
-            </li>
-            <li class="c-action">
-                <sapn class="c-actoin__title">منتجات ظرورية على وشلك النفاذ</sapn>
-                <a href="" class="c-btn c-action__link">مشاهدة المنتجات</a>
-            </li>
-        </div>
-    </div>
-</body>
-</html>
+<ul class="c-actions">
+    <li class="c-action">
+        <sapn class="c-actoin__title">طلبات تحتاج المعالجة 10</sapn>
+        <a href="" class="c-btn c-action__link">مشاهدة الطلبات</a>
+    </li>
+    <li class="c-action">
+        <sapn class="c-actoin__title">رسائل تحتاج الاجابة 5</sapn>
+        <a href="" class="c-btn c-action__link">مشاهدة الرسائل</a>
+    </li>
+    <li class="c-action">
+        <sapn class="c-actoin__title">منتجات ظرورية على وشلك النفاذ</sapn>
+        <a href="" class="c-btn c-action__link">مشاهدة المنتجات</a>
+    </li>
+</ul>
