--- a/src/components/table.html
+++ b/src/components/table.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="component-container">        
-        <div class="c-table">
+        <div class="c-table c-table--select-all">
             <header class="c-table__header">
                 <h3 class="c-table__title">المنتجات</h3>
                 <div class="c-table__actions"><button class="c-btn c-btn--destructive c-btn--slim">حذف</button></div>
@@ -86,8 +86,7 @@
                         <button class="c-btn c-btn--icon"><i class="c-icon c-icon--arrow-right2"></i></button>
                         <button class="c-btn c-btn--icon"><i class="c-icon c-icon--arrow-left2"></i></button>
                     </div>
-                </div>
-                
+                </div>                
             </footer>
         </div>        
     </div>
