--- a/src/assets/sass/components/sidebar.scss
+++ b/src/assets/sass/components/sidebar.scss
@@ -9,7 +9,7 @@ $sidebar-logo-heigth:$sidebar-control-width;
     position: fixed;
     top: 0;
     right: 0;
-    background-color: $color-background;
+    background-color: #e1e1e1;
     padding: spacing("wide") spacing("small");
 }
 .c-sidebar__control{
@@ -23,7 +23,7 @@ $sidebar-logo-heigth:$sidebar-control-width;
     width: $sidebar-icon-size;
     color: $color-dark;
     font-size: 16px;
-    margin: spacing("small") 0;
+    margin: spacing("extra-small") 0;
     display: block;
 }
 .c-sidebar__icon--large{
@@ -44,13 +44,8 @@ $sidebar-logo-heigth:$sidebar-control-width;
         border-radius: 50%;
     }
 }
-
-
-
-
 .c-sidebar__menu{
     margin-right: spacing("small");
-    
 }
 .c-sidebar__title{
     font-size: 24px;
