--- a/src/assets/sass/components/table.scss
+++ b/src/assets/sass/components/table.scss
@@ -7,12 +7,12 @@ $product-media-size: 40px;
 }
 .c-table__header{
     display: flex;
-    align-items: center;
+    align-items: baseline;
     margin-bottom: spacing("small");
     padding: 0 spacing("normal");
 }
 .c-table__navigatoin{
-    // margin-right: auto;
+    margin-right: auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
