--- a/src/assets/sass/components/textfield.scss
+++ b/src/assets/sass/components/textfield.scss
@@ -20,6 +20,10 @@
         outline: none;
         box-shadow: inset 0 1px 2px 0 rgba(darken($color-primary, 30%), 0.2), 0 0 0 2px $color-primary;
     }
+    &--left::placeholder{
+        direction: rtl;
+        text-align: left;
+    }
 }
 .c-textfield_textarea{
     height: 150px;
